fixed proj cards spacing issue

--- a/style.css
+++ b/style.css
@@ -329,7 +329,8 @@ section{
     transform-style: preserve-3d;
     perspective: 1000px;
     border-radius: 6px;
-    padding: 50px 25px;
+    margin-top: 20px;
+    padding: 50px 20px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
